Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z10.out
Z10.java:11:8: compiler.err.invalid.annotation.member.type
1 error
